# libModMii

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
database/: database.json
downloader/: d2xbuild.py  database.py  download.py  nus_download.py  osc_download.py
downloader/helpers/: validation.py
libModMii/assets/: database.json
libModMii/database/: __init__.py
libModMii/download/wiipy/: ciosbuild.py
libModMii/usbloader/: __init__.py  usb_loader.py
scripts/: convert-batch-to-json.js  generate_database.py
src/database/: database.py
src/downloader/: d2xbuild.py  osc_download.py
src/libModMii/: __init__.py
src/libModMii.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/libModMii/download/: __init__.py  d2xbuild.py  database.py  download.py  osc_download.py  validation.py
src/libModMii/download/wiipy/: nus.py
src/libModMii/downloader/: d2xbuild.py  download.py
src/libModMii/syscheck/: __init__.py  syscheck_updater.py  validation_helpers.py
src/libModMii/usbloader/: __init__.py
syscheck/: syscheck_updater.py
syscheck/helpers/: info_helpers.py  validation_helpers.py
syscheck_updater/: info_helpers.py  syscheck_updater.py  validation_helpers.py
tests/: test.py
