[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libModMii"
version = "0.1.0"
description = "Python toolkit for Wii/vWii system management, inspired by ModMii and powered by libWiiPy."
authors = [
    { name = "jmischler72" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "libWiiPy @ git+https://github.com/NinjaCheetah/libWiiPy"
]

[project.urls]
Homepage = "https://github.com/jmischler72/libModMii"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["assets/*"]
