[project]
name = "libModMii"
version = "0.1.2"
description = "Python toolkit for Wii/vWii system management, inspired by ModMii and powered by libWiiPy."
authors = [
    { name = "jmischler72" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "libWiiPy @ git+https://github.com/NinjaCheetah/libWiiPy"
]

[project.urls]
Homepage = "https://github.com/jmischler72/libModMii"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libModMii"]